tdf#91254: draw missing EMF hairlines with linecap settings

By removing linecap settings here (meaningless with 0 line width).

Change-Id: I532d09af77d77dadcbbdd2f957136689239ccc07